--- a/view/view.fxml
+++ b/view/view.fxml
@@ -36,19 +36,14 @@
                      <children>
                         <Pane>
                            <children>
-                              <TextField layoutX="54.0" layoutY="2.0" prefHeight="25.0" prefWidth="45.0" />
-                              <TextField layoutX="54.0" layoutY="33.0" prefHeight="25.0" prefWidth="45.0" />
-                              <TextField layoutX="54.0" layoutY="65.0" prefHeight="25.0" prefWidth="45.0" />
+                              <TextField fx:id="form_points" layoutX="54.0" layoutY="2.0" prefHeight="25.0" prefWidth="45.0" />
+                              <TextField fx:id="form_min" layoutX="54.0" layoutY="33.0" prefHeight="25.0" prefWidth="45.0" />
+                              <TextField fx:id="form_max" layoutX="54.0" layoutY="65.0" prefHeight="25.0" prefWidth="45.0" />
                               <Label layoutX="14.0" layoutY="6.0" text="Points:" />
                               <Label layoutX="14.0" layoutY="37.0" text="Min:" />
                               <Label layoutX="14.0" layoutY="69.0" text="Max:" />
-                              <SplitMenuButton fx:id="types" layoutX="17.0" layoutY="97.0" mnemonicParsing="false" text="Type">
-                                <items>
-                                  <MenuItem mnemonicParsing="false" text="Random" />
-                                  <MenuItem mnemonicParsing="false" text="Red Blue" />
-                                </items>
-                              </SplitMenuButton>
-                              <Button layoutX="24.0" layoutY="130.0" mnemonicParsing="false" onAction="#generate" text="Generate" />
+                              <ChoiceBox fx:id="form_types" layoutX="13.0" layoutY="105.0" prefHeight="25.0" prefWidth="83.0" />
+                              <Button layoutX="13.0" layoutY="143.0" mnemonicParsing="false" onAction="#form_generate" prefHeight="25.0" prefWidth="82.0" text="Generate" />
                            </children>
                         </Pane>
                      </children>
@@ -61,16 +56,6 @@
    <center>
       <TabPane fx:id="resultTabPane" tabClosingPolicy="ALL_TABS" BorderPane.alignment="CENTER">
         <tabs>
-          <Tab text="Results">
-               <content>
-                  <ListView prefHeight="200.0" prefWidth="200.0" />
-               </content>
-          </Tab>
-          <Tab text="Results">
-               <content>
-                  <ListView prefHeight="200.0" prefWidth="200.0" />
-               </content>
-          </Tab>
         </tabs>
       </TabPane>
    </center>
