--- a/view/view.fxml
+++ b/view/view.fxml
@@ -1,63 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.web.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ViewController">
-   <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#save" text="Save" />
-                  <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </top>
-   <left>
-      <SplitPane orientation="VERTICAL" BorderPane.alignment="CENTER">
-        <items>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="view.ViewController">
+    <top>
+        <MenuBar BorderPane.alignment="CENTER">
+            <Menu mnemonicParsing="false" text="File">
+                <MenuItem mnemonicParsing="false" onAction="#save" text="Save"/>
+                <MenuItem mnemonicParsing="false" text="Close"/>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+                <MenuItem mnemonicParsing="false" text="Delete"/>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+                <MenuItem mnemonicParsing="false" text="About"/>
+            </Menu>
+        </MenuBar>
+    </top>
+    <left>
+        <SplitPane orientation="VERTICAL" BorderPane.alignment="CENTER">
             <ScrollPane prefHeight="373.0" prefWidth="104.0">
-              <content>
                 <AnchorPane>
-                     <children>
-                        <Pane>
-                           <children>
-                              <TextField fx:id="form_points" layoutX="54.0" layoutY="2.0" prefHeight="25.0" prefWidth="45.0" />
-                              <TextField fx:id="form_min" layoutX="54.0" layoutY="33.0" prefHeight="25.0" prefWidth="45.0" />
-                              <TextField fx:id="form_max" layoutX="54.0" layoutY="65.0" prefHeight="25.0" prefWidth="45.0" />
-                              <Label layoutX="14.0" layoutY="6.0" text="Points:" />
-                              <Label layoutX="14.0" layoutY="37.0" text="Min:" />
-                              <Label layoutX="14.0" layoutY="69.0" text="Max:" />
-                              <ChoiceBox fx:id="form_types" layoutX="13.0" layoutY="105.0" prefHeight="25.0" prefWidth="83.0" />
-                              <Button layoutX="13.0" layoutY="143.0" mnemonicParsing="false" onAction="#form_generate" prefHeight="25.0" prefWidth="82.0" text="Generate" />
-                           </children>
-                        </Pane>
-                     </children>
-                  </AnchorPane>
-              </content>
+                    <Pane>
+                        <TextField fx:id="form_points" layoutX="54.0" layoutY="5.0" prefHeight="25.0"
+                                   prefWidth="45.0"/>
+                        <TextField fx:id="form_min" layoutX="54.0" layoutY="35.0" prefHeight="25.0"
+                                   prefWidth="45.0"/>
+                        <TextField fx:id="form_max" layoutX="54.0" layoutY="65.0" prefHeight="25.0"
+                                   prefWidth="45.0"/>
+                        <Label layoutX="14.0" layoutY="6.0" text="Points:"/>
+                        <Label layoutX="14.0" layoutY="36.0" text="Min:"/>
+                        <Label layoutX="14.0" layoutY="66.0" text="Max:"/>
+                        <ChoiceBox fx:id="form_types" layoutX="12.0" layoutY="95.0" prefHeight="25.0"
+                                   prefWidth="83.0"/>
+                        <Button layoutX="12.0" layoutY="125.0" mnemonicParsing="false"
+                                onAction="#form_generate" prefHeight="25.0" prefWidth="84.0"
+                                text="Generate"/>
+                    </Pane>
+                </AnchorPane>
             </ScrollPane>
-        </items>
-      </SplitPane>
-   </left>
-   <center>
-      <TabPane fx:id="resultTabPane" tabClosingPolicy="ALL_TABS" BorderPane.alignment="CENTER">
-        <tabs>
-        </tabs>
-      </TabPane>
-   </center>
+        </SplitPane>
+    </left>
+    <center>
+        <TabPane fx:id="resultTabPane" tabClosingPolicy="ALL_TABS" BorderPane.alignment="CENTER">
+        </TabPane>
+    </center>
 </BorderPane>
